--- a/views/stories/add.handlebars
+++ b/views/stories/add.handlebars
@@ -1,1 +1,38 @@
 <h1>Add Story</h1>
+<div class="row">
+    <form action="/stories" method="POST" class="col s12">
+    <div class="row">
+        <div class="input-field">
+            <input type="text" name="title">
+            <label for="title">Title</label>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="input-field">
+            <select name="status">
+                <option value="public" selected>Public</option>
+                <option value="private">Private</option>
+                <option value="unpublished">Draft</option>
+            </select>
+            <label for="status">Story Status</label>
+        </div>
+    </div>
+
+    <div class="row">
+        <p>
+            <input type="checkbox" name="allowComments" id="filled-in-box" class="filled-in" checked="checked">
+            <label for="allowComments">Allow Comments</label>
+        </p>
+    </div>
+
+    <div class="row">
+        <div class="input-field">
+            <h5>Tell us your Story:</h5>
+            <textarea name="body"></textarea>
+        </div>
+    </div>
+
+    <input type="submit" value="Save" class="btn">
+    </form>
+</div>
