--- a/views/stories/index.handlebars
+++ b/views/stories/index.handlebars
@@ -1,1 +1,26 @@
 <h1>Stories</h1>
+<div class="row">
+  {{#each stories}}
+  <div class="col s14 m4">
+    <div class="card">
+      <div class="card-image">
+        <a href="/stories/edit/{{id}}" class="btn-floating halfway-fab red"><i class="fa fa-pencil"></i></a>
+      </div>
+      <div class="card-content center-align">
+        <h5>{{title}}</h5>
+        <p class="story-text">{{body}}</p>
+        <br>
+        <div class="chip">
+          <img src="{{user.image}}" alt="{{user.firstName}} {{user.lastName}}">
+          {{user.firstName}} {{user.lastName}}
+        </div>
+      </div>
+      <div class="card-action center-align">
+        <a href="/stories/show/{{id}}" class="btn grey">Read More</a>
+      </div>
+    </div>
+  </div>
+  {{else}}
+  <p>No stories found</p>
+  {{/each}}
+</div>
