--- a/views/stories/edit.handlebars
+++ b/views/stories/edit.handlebars
@@ -1,1 +1,41 @@
 <h1>Edit Story</h1>
+<div class="row">
+    <form action="/stories/{{story.id}}?_method=PUT" method="POST" class="col s12">
+        <input type="hidden" name="_method" value="PUT">
+        <div class="row">
+            <div class="input-field">
+                <input type="text" name="title" value="{{story.title}}">
+                <label for="title">Title</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field">
+                <select name="status">
+                    {{#select story.status}}
+                    <option value="public" selected>Public</option>
+                    <option value="private">Private</option>
+                    <option value="unpublished">Draft</option>
+                    {{/select}}
+                </select>
+                <label for="status">Story Status</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <p>
+                <input type="checkbox" name="allowComments" id="filled-in-box" class="filled-in" {{#if story.allowComments}} checked="checked" {{/if}}>
+                <label for="filled-in-box">Allow Comments</label>
+            </p>
+        </div>
+
+        <div class="row">
+            <div class="input-field">
+                <h5>Tell us your Story:</h5>
+                <textarea name="body">{{story.body}}</textarea>
+            </div>
+        </div>
+
+        <input type="submit" value="Save" class="btn">
+    </form>
+</div>
