--- a/views/index/dashboard.handlebars
+++ b/views/index/dashboard.handlebars
@@ -18,7 +18,8 @@
             <td><span class="dash-status">{{status}}</span></td>
             <td>
                 <a class="btn left-align" href="/stories/edit/{{id}}"><i class="fa fa-pencil"></i> Edit</a>
-                <form id="delete-form" action="/stories/{{id}}" method="POST">
+                <form id="delete-form" action="/stories/{{id}}?_method=DELETE" method="POST">
+                    <input type="hidden" name="_method" value="DELETE">
                     <button type="submit" class="btn red"><i class="fa fa-remove"></i> Delete</button>
                 </form>
             </td>
