--- a/views/stories/show.handlebars
+++ b/views/stories/show.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s12 m8">
+    <div class="col s12 m9">
         <h3>{{story.title}}</h3>
         <div class="card story">
             <div class="card-content">
@@ -7,8 +7,40 @@
                 {{{story.body}}}
             </div>
         </div>
+
+        {{#if story.allowComments}}
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">Comments</span>
+                {{#if user}}
+                <form action="/stories/comment/{{story.id}}" method="post">
+                    <div class="input-field">
+                        <textarea name="commentBody" class="materialize-textarea" ></textarea>
+                        <label>Add Comment</label>
+                    </div>
+                    <input type="submit" class="btn" value="Submit">
+                </form>
+                {{else}}
+                <p>Please <a href="/auth/google" class="">log in</a> to leave a comment.</p>
+                {{/if}}
+            </div>
+        </div>
+            {{#each story.comments}}
+                <div class="card">
+                    <div class="card-content">
+                        <h5>{{commentBody}}</h5>
+                        <div class="chip">
+                            <img src="{{commentUser.image}}">
+                            {{commentUser.firstName}} {{commentUser.lastName}}
+                        </div>
+                        <br>
+                        <small>Posted: {{formatDate commentDate 'MMM do YYYY'}}</small>
+                    </div>
+                </div>
+            {{/each}}
+        {{/if}}
     </div>
-    <div class="col s12 m4">
+    <div class="col s12 m3">
         <div class="card center-align">
             <div class="card-content">
                 <span class="card-title">{{story.user.firstName}} {{story.user.lastName}}</span>
